[package]
name = "reveal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
full_moon = {version = "0.18.1", features = ["roblox"]}
serde = {version = "1.0.190", features = ["derive"]}
serde_json = "1.0.107"
termtree = "0.4.1"